--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-    "name": "demo",
+    "name": "be-exam",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "server.js",
     "scripts": {
         "format-code": "npx prettier . --write",
+        "db:migrate": "npx sequelize-cli db:migrate",
+        "db:seed": "npx sequelize-cli db:seed:all",
         "start": "nodemon server.js"
     },
     "keywords": [],
@@ -25,7 +27,8 @@
         "mysql2": "^3.6.2",
         "passport": "^0.6.0",
         "passport-local": "^1.0.0",
-        "sequelize": "^6.33.0"
+        "sequelize": "^6.33.0",
+        "slugify": "^1.6.6"
     },
     "devDependencies": {
         "nodemon": "^3.0.1",
